--- a/src/app/my-event/my-event.component.html
+++ b/src/app/my-event/my-event.component.html
@@ -1,1 +1,7 @@
-<p>my-event works!</p>
+<div class="row">
+<div class="col-12">
+<div class="card" *ngFor= "let item of myEvent">
+<h4>{{item.eventTitle}}</h4>
+</div>
+</div>
+</div>
