--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,19 +7,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/createEvent">Create Event</a>
+              <a class="nav-link" routerLink="createEvent">Create Event</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/myEvent">MyEvent</a>
+              <a class="nav-link" routerLink="myEvent">MyEvent</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Add Bank Account</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/reset-password">Reset password</a>
+              <a class="nav-link" routerLink="reset-password">Reset password</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" (click)= "logout()" >Logout</a>
