--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -13,12 +13,14 @@
                             <div class="form_input">
                                 <label>Title *</label>
                                 <input type="text" class="form-control" formControlName="eventTitle"
-                                    placeholder="Enter Event Title" form>
+                                    placeholder="Enter Event Title"
+                                    ngModel="{{createdEventDetails ? createdEventDetails.eventTitle : ''}}" form>
                             </div>
                             <div class="row">
                                 <div class="dropdown col-md-12">
                                     <h5>Select Event Type</h5>
-                                    <select class="form-control" formControlName="eventType">
+                                    <select class="form-control" formControlName="eventType"
+                                        ngModel="{{createdEventDetails ? createdEventDetails.eventType : ''}}">
                                         <option value="Wedding">Wedding</option>
                                         <option value="Birthday">Birthday</option>
                                         <option value="Funeral">Funeral</option>
@@ -32,11 +34,13 @@
                             <div class="row mt-2">
                                 <div class="col-md-6">
                                     <h5>StartDate</h5>
-                                    <input type="date" class="form-control" formControlName="startDate">
+                                    <input type="date" class="form-control" formControlName="startDate"
+                                        ngModel="{{createdEventDetails ? selectedStartDate : ''}}">
                                 </div>
                                 <div class="col-md-6">
                                     <h5>EndDate</h5>
-                                    <input type="date" class="form-control" formControlName="endDate">
+                                    <input type="date" class="form-control" formControlName="endDate"
+                                        ngModel="{{createdEventDetails ? selectedEndDate : ''}}">
                                 </div>
                             </div>
                             <div class="row mt-2">
@@ -44,7 +48,8 @@
                                     <div class="form_input">
                                         <label>Event HashTag *</label>
                                         <input type="text" placeholder="Enter Event Hastag" class="form-control"
-                                            formControlName="hashTag">
+                                            formControlName="hashTag"
+                                            ngModel="{{createdEventDetails ? createdEventDetails.hashTag : ''}}">
                                     </div>
                                 </div>
                             </div>
@@ -53,12 +58,14 @@
                                     <h5>Make this event Public or Private?</h5>
                                     <div class="custom-control custom-switch">
                                         <input type="checkbox" class="custom-control-input" id="switch1"
-                                            formControlName="isPublic">
+                                            formControlName="isPublic"
+                                            ngModel="{{createdEventDetails ? createdEventDetails.isPublic : ''}}">
                                         <label class="custom-control-label" for="switch1">Public</label>
                                     </div>
                                 </div>
                             </div>
                             <div class="row mt-2">
+                                <img src="{{path}}{{createdEventDetails.profilePhoto}}" class="rounded-circle" height="100">
                                 <div class="col-md-12">
                                     <h5>Upload Profile Photo</h5>
                                     <div class="custom-file">
@@ -66,6 +73,7 @@
                                             (change)="addFile($event.target.files)" id="customFile"
                                             accept="image/png, image/jpeg, image/jpg" hidden>
                                         <label class="custom-file-label" for="customFile">Choose file</label>
+
                                     </div>
                                 </div>
                             </div>
@@ -73,7 +81,8 @@
                                 <div class="col-md-12">
                                     <h5>Select Last Payment Deadline Date</h5>
                                     <input type="date" name="selectDate" formControlName="deadlineDate"
-                                        class="form-control">
+                                        class="form-control"
+                                        ngModel="{{createdEventDetails ? paymentDeadlineDate : ''}}">
                                 </div>
                             </div>
                             <div class="row mt-2">
@@ -87,8 +96,13 @@
                                 </div>
                             </div>
                             <div class="next_step_and_prev_step mt-2">
-                                <a href="javascript:void(0);" class="next_step" (click)="addEvent()">Next</a>
+                                <a href="javascript:void(0);" class="next_step"
+                                    (click)="createdEventDetails? updateEvent() : addEvent()">Next</a>
                             </div>
+
+                            <!-- <div class="next_step_and_prev_step mt-2" *ngIf="createdEventDetails">
+                                    <a href="javascript:void(0);" class="next_step">Next</a>
+                                </div> -->
                         </form>
                     </div>
                 </div>
@@ -99,52 +113,53 @@
                 <div class="row">
                     <div class="col-12">
                         <!-- <h3>Event Activities</h3> -->
-                        <form [formGroup]="activityForm" class="user_acc_info">
+                        <form  *ngIf="activityForm" [formGroup]="activityForm" class="user_acc_info">
                             <div formArrayName="activity">
                                 <div [formGroupName]="i"
                                     *ngFor="let tech of activityForm.controls.activity.controls; let i = index"
                                     class="single_activity">
                                     <p>activity #{{i+1}}</p>
-                                    <div class="row mt-3">
-                                        <div class="col-md-5">
-                                            <div class="form_input">
-                                                <label>Activity Name *</label>
-                                                <input type="text" class="form-control" formControlName="activityName"
-                                                    placeholder="Enter activity name">
-                                            </div>
-                                        </div>
-                                        <div class="col-md-5">
-                                            <div class="form_input">
-                                                <label>Activity Date</label>
-                                                <input type="date" class="form-control" formControlName="activityDate">
-                                            </div>
-                                        </div>
-                                        <div>
-                                            <input id="eventId" class="form-control" formControlName="eventId"
-                                                [(ngModel)]="eventId" hidden>
-                                        </div>
-                                        <div class="col-md-2">
-                                            <div class="remove_row"
-                                                *ngIf="activityForm.controls.activity.controls.length>1">
-                                                <button type="submit" class="btn btn-primary btn-blobk"
-                                                    (click)="removeActivityField(i)"><span class="fa fa-minus"></span>
-                                                    Remove</button>
-                                            </div>
+                                    <!-- <div class="row mt-3" *ngFor="let activity of eventActivities"> -->
+                                    <div class="col-md-5">
+                                        <div class="form_input">
+                                            <label>Activity Name *</label>
+                                            <input type="text" class="form-control" formControlName="activityName"
+                                                placeholder="Enter activity name">
                                         </div>
                                     </div>
+                                    <div class="col-md-5">
+                                        <div class="form_input">
+                                            <label>Activity Date</label>
+                                            <input type="date" class="form-control" formControlName="activityDate">
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <input id="eventId" class="form-control" formControlName="eventId"
+                                            [(ngModel)]="eventId" hidden>
+                                    </div>
+                                    <div class="col-md-2">
+                                        <div class="remove_row"
+                                            *ngIf="activityForm.controls.activity.controls.length>1">
+                                            <button type="submit" class="btn btn-primary btn-blobk"
+                                                (click)="removeActivityField(i)"><span class="fa fa-minus"></span>
+                                                Remove</button>
+                                        </div>
+                                    </div>
+                                    <!-- </div> -->
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="add_row">
-                                    <button type="submit" class="btn float-right btn-primary"
+                                    <button type="button" class="btn float-right btn-primary"
                                         (click)="addActivityField()"><span class="fa fa-plus"></span> Add</button>
                                 </div>
                             </div>
-                            <div class="next_step_and_prev_step">
-                                <a href="javascript:void(0);" class="prev_step">Previous</a>
-                                <a href="javascript:void(0);" class="next_step" (click)="addActivity()">Next</a>
-                            </div>
                         </form>
+                        <div class="next_step_and_prev_step">
+                            <a href="javascript:void(0);" class="prev_step">Previous</a>
+                            <a href="javascript:void(0);" class="next_step"
+                                (click)="createdEventDetails ? updateActivity() : addActivity()">Next</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -154,8 +169,8 @@
             <h3><span class="step_number">3</span>Create Group</h3>
             <div class="step_content">
                 <div class="row">
-                    <div class="col-12" *ngIf="groupForm">
-                        <form [formGroup]="groupForm" class="billing_address">
+                    <div class="col-12">
+                        <form *ngIf="groupForm" [formGroup]="groupForm" class="billing_address">
                             <div class="form_input" formArrayName="group">
                                 <div class="row" [formGroupName]="i"
                                     *ngFor="let item of groupForm.controls.group.controls; let i = index">
@@ -225,7 +240,7 @@
 
                                     <div class="add_row" *ngIf="groupForm.controls.group.controls.length>0">
                                         <button type="button" class="btn float-right btn-primary"
-                                            (click)="AddGroupField(createdActivity[i].activityId, i)"><span
+                                            (click)="createdEventDetails ? AddGroupField(eventActivities[i].activityId, i) : AddGroupField(createdActivity[i].activityId, i)"><span
                                                 class="fa fa-plus"></span> Add</button>
                                     </div>
                                 </div>
@@ -234,7 +249,7 @@
                         </form>
                         <div class="next_step_and_prev_step mt-2">
                             <a href="javascript:void(0);" class="prev_step">Previous</a>
-                            <a href="javascript:void(0);" class="next_step" (click)="addGroup()">Create
+                            <a href="javascript:void(0);" class="next_step" (click)="createdEventDetails ? updateGroup() : addGroup()">Create
                                 Event</a>
                         </div>
                     </div>
