--- a/src/app/my-event/my-event.component.html
+++ b/src/app/my-event/my-event.component.html
@@ -1,32 +1,40 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <div class="card p-4" *ngFor="let item of myEvent">
-                <div class="row">
-                    <div class="col-4 m-auto">
-                        <img src="{{path}}{{item.profilePhoto}}" class="rounded-circle img-fluid">
+            <div class="card" *ngFor="let item of myEvent">
+                <div [ngStyle]="{background: getSrc(item.eventTheme)}" class="theme-background">
+                    <div class="row">
+                        <div class="col-4 m-auto">
+                            <img *ngIf="item && item.profilePhoto" src="{{path}}{{item.profilePhoto}}" class="rounded-circle img-fluid">
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col text-center pt-4">
-                        <p>EventType:-
-                            <span>{{item.eventType}}</span>
-                        </p>
+                    <div class="row">
+                        <div class="col text-center pt-4">
+                            <p>EventType:-
+                                <span>{{item.eventType}}</span>
+                            </p>
+                        </div>
+                        <div class="col text-center pt-4">
+                            <p>EventTitle:-
+                                <span>{{item.eventTitle}}</span>
+                            </p>
+                        </div>
+                        <div class="col text-center pt-4">
+                            <p>EventHashTag:-
+                                <span>{{item.hashTag}}</span>
+                            </p>
+                        </div>
                     </div>
-                    <div class="col text-center pt-4">
-                        <p>EventTitle:-
-                            <span>{{item.eventTitle}}</span>
-                        </p>
-                    </div>
-                    <div class="col text-center pt-4">
-                        <p>EventHashTag:-
-                            <span>{{item.hashTag}}</span>
-                        </p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                            <button type="button" class="btn btn-primary" (click)= "viewMoreDeatils(item._id)">View More </button>
+                    <div class="row">
+                        <div class="col-6">
+                            <button type="button" class="btn btn-primary" (click)="viewMoreDeatils(item._id)">View More
+                            </button>
+                        </div>
+
+                        <div class="col-6">
+                                <button type="button" class="btn btn-primary" (click)="ThankYouMessage(item._id)">Thank You Message
+                                </button>
+                            </div>
                     </div>
                 </div>
             </div>
